src/components/common/FileInput/FileInput.scss
@use '@styles/utils/variables' as *;
@use '@styles/utils/mixins' as *;

.form-file-input {
  position: relative;
  width: 100%;
  margin-top: 47px;

  &__label {
    @include sr-only;
  }
  &__control {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
    height: 54px;
    border: 1px solid $color-grey-100;
    border-left-style: none;
    border-radius: 4px;
    &--invalid {
      border-color: $color-red;
    }
  }
  &__button {
    width: 83px;
    height: 54px;
    padding: 14px 15px;
    border: 1px solid $color-black;
    border-radius: 4px 0px 0px 4px;
    &--invalid {
      border-color: $color-red;
    }
  }
  &__filename {
    padding: 14px 16px;
    color: $color-grey-300;
    &--invalid {
      color: $color-red;
    }
  }
  &__input {
    display: none;
  }
  &__message {
    position: absolute;
    top: 58px;
    left: 16px;
    font-size: $font-size-sm;
    line-height: $line-height-sm;
    color: $color-red;
  }
}

